<resources>
    <string name="app_name">Equipment Life Cam - Paid</string>
    <string name="image_screen_initial_logo">Screen image shown at the app initial</string>
    <string name="action_add_new_equipment">Add new Equipment Information</string>
    <string name="action_save_new_equipment">Save new Equipment Information on Database</string>
    <string name="action_edit_save_equipment">Save the Equipment Information edition on Database</string>
    <string name="action_edit_save_cancel_equipment">Cancel the Equipment Information edition save on Database</string>
    <string name="action_edit_equipment_details">Edit the Equipment Information details on Database</string>
    <string name="detail_equipment_image_description">Equipment image detail</string>
    <string name="equipment_upload_image_description">Uploads the Equipment picture to the cloud storage</string>
    <string name="equipment_choose_image_description">Uploads the Equipment picture to the cloud storage</string>
    <string name="equipment_detail_image_status">Shows the Equipment status demonstration with an icon to the user</string>
    <string name="equipment_initial_image_button_google_login">Shows the Google icon as an option for the user to login via Google account</string>
    <string name="equipment_initial_image_button_google_facebook_login">Shows the Facebook icon as an option for the user to login via Facebook account</string>
    <string name="equipment_nav_bar_image_logo">Shows the equipment app logo in the drawer menu header</string>
    <string name="equipment_menu_image_owned_status_icon">Shows the equipment menu owned icon in the drawer menu</string>
    <string name="equipment_menu_image_sold_status_icon">Shows the equipment menu sold icon in the drawer menu</string>
    <string name="equipment_menu_image_stolen_status_icon">Shows the equipment menu stolen icon in the drawer menu</string>
    <string name="equipment_list_item_circular_image">Shows the equipment picture on the list item</string>
    <string name="equipment_list_item_status_icon_image">Shows the equipment status icon on the list item</string>
    <string name="image_screen_equipment_login_logo">Screen image shown at the app login</string>
    <string name="image_google_login_button">Image shown on the button at the app login</string>
    <string name="image_widget_list">Image shown on the top of the list at the app widget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="transition_image">transition</string>
    <string name="equipment_detail_toolbar_title_label">Equipment Details</string>
    <string name="equipment_detail_edit_toolbar_title_label">Equipment Details Edit</string>
    <string name="equipment_registration_toolbar_title_label">Equipment Registration</string>
    <string name="equipment_brand_label">Brand:</string>
    <string name="equipment_model_label">Model:</string>
    <string name="equipment_serial_number_label">Serial Number:</string>
    <string name="equipment_registration_date_label">Date Registered:</string>
    <string name="equipment_owner_label">Owner:</string>
    <string name="equipment_status_label">Equipment Status:</string>
    <string name="equipment_short_description_label">Short Description:</string>
    <string name="equipment_image_upload_label">Equipment Picture:</string>
    <string name="equipment_empty_list_label">There are no equipments registered yet</string>
    <string name="equipment_picture_name_hint">Enter name for Image</string>
    <string name="equipment_registration_choose_picture_button">Picture</string>
    <string name="equipment_list_menu_search">Search equipment</string>
    <string name="equipment_checkbox_upload_image">Upload Image?</string>
    <string name="equipment_upload_image_successful">Successfully uploaded</string>
    <string name="hint_equipment_edit_brand">Enter brand</string>
    <string name="hint_equipment_edit_model">Enter model</string>
    <string name="hint_equipment_edit_serial">Enter serial number</string>
    <string name="hint_equipment_edit_short_description">Enter short description</string>
    <string name="hint_equipment_registration_brand">Enter brand</string>
    <string name="hint_equipment_registration_model">Enter model</string>
    <string name="hint_equipment_registration_serial">Enter serial number</string>
    <string name="hint_equipment_registration_short_description">Enter short description</string>
    <string name="option_equipment_status_owned">Owned</string>
    <string name="option_equipment_status_sold">Sold</string>
    <string name="option_equipment_status_stolen">Stolen</string>
    <string name="equipment_owned_menu">List Equipment Owned</string>
    <string name="equipment_sold_menu">List Equipment Sold</string>
    <string name="equipment_stolen_menu">List Equipment Stolen</string>
    <string name="equipment_registration_storage_permission_request_granted">Permission granted, now you can read the storage</string>
    <string name="equipment_registration_storage_permission_request_not_granted">Oops you just denied the permission</string>
    <string name="widget_equipment_title">Equipment List</string>
    <string name="description_widget_text">Shows the list of equipments on a widget list</string>
    <string name="equipment_brand_content">Canon Digital Profissional</string>
    <string name="equipment_model_content">Rebel T6 18-55</string>
    <string name="equipment_serial_number_content">ED577A23DR984</string>
    <string name="equipment_registration_date_content">23/02/2014</string>
    <string name="equipment_owner_content">Arthur Aparecido Monteiro Figueiredo</string>
    <string name="equipment_status_content">Equipment Sold</string>
    <string name="equipment_short_description_content">A EOS Rebel T6 é a câmera que oferece a qualidade
        que suas fotografias merecem. Ideal para usuários de smartphones ou câmeras digitais compactas,
        que buscam por imagens com qualidade superior. Ela vem com um sensor de imagem CMOS de
        18.0 Megapixels e um processador de imagem DIGIC 4+ para fotos e vídeos.</string>
    <string name="action_edit_profile_detail">Edit the profile Information edition on Database</string>
    <string name="action_save_profile_registration">Saves the profile Information registration on Database</string>
    <string name="action_edit_save_profile">Save the Profile Information edition on Database</string>
    <string name="action_edit_save_cancel_profile">Cancel the Profile Information edition save on Database</string>
    <string name="profile_detail_menu_label">Profile</string>
    <string name="profile_detail_toolbar_title_label">Profile Details</string>
    <string name="profile_detail_edit_toolbar_title_label">Profile Details Edit</string>
    <string name="profile_registration_toolbar_title_label">Profile Registration</string>
    <string name="profile_detail_name_label">Name:</string>
    <string name="profile_detail_cpf_label">CPF:</string>
    <string name="profile_detail_phone_label">Telephone:</string>
    <string name="profile_detail_email_label">Email:</string>
    <string name="profile_detail_address_label">Address:</string>
    <string name="profile_detail_city_label">City:</string>
    <string name="profile_detail_state_label">State:</string>
    <string name="profile_logout_menu_label">Logout</string>
    <string name="hint_profile_edit_name">Enter name</string>
    <string name="hint_profile_edit_cpf">Enter CPF</string>
    <string name="hint_profile_edit_telephone">Enter telephone</string>
    <string name="hint_profile_edit_email">Enter email</string>
    <string name="hint_profile_edit_address">Enter address</string>
    <string name="hint_profile_edit_city">Enter city</string>
    <string name="hint_profile_edit_state">Enter state</string>
    <string name="hint_profile_edit_password">Enter password</string>
    <string name="hint_profile_edit_password_confirm">Enter password confirmation</string>
    <string name="hint_profile_registration_name">Enter name</string>
    <string name="hint_profile_registration_cpf">Enter CPF</string>
    <string name="hint_profile_registration_telephone">Enter telephone</string>
    <string name="hint_profile_registration_email">Enter email</string>
    <string name="hint_profile_registration_address">Enter address</string>
    <string name="hint_profile_registration_city">Enter city</string>
    <string name="hint_profile_registration_state">Enter state</string>
    <string name="profile_sign_in_button">Sign In</string>
    <string name="profile_sign_up_button">Sign Up</string>
    <string name="profile_sign_up_with_facebook_button">Sign Up with</string>
    <string name="profile_sign_up_with_google_button">Sign Up with</string>
    <string name="nav_bar_owner_name_label">User:</string>
    <string name="nav_bar_owner_username">a.figueiredo</string>
    <string name="profile_detail_username_label">Username:</string>
    <string name="profile_detail_password_label">Password:</string>
    <string name="profile_detail_password_confirm_label">Confirm password:</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_confirm_label">Confirm Password</string>
    <string name="login_button_label">Login</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="signup_button_label_cancel">Cancel</string>
    <string name="login_password_error">Incorrect Password</string>
    <string name="login_profile_validator_password_limit_error">between 4 and 10 alphanumeric characters</string>
    <string name="login_profile_validator_username_required_error">Email is required</string>
    <string name="login_profile_validator_password_not_match">Passwords must be matched</string>
    <string name="registration_profile_validator_name_required">Name is required</string>
    <string name="registration_profile_validator_cpf_required">CPF is required</string>
    <string name="registration_profile_validator_phone_required">Phone is required</string>
    <string name="registration_profile_validator_address_required">Address is required</string>
    <string name="registration_profile_validator_city_required">City is required</string>
    <string name="registration_profile_validator_state_required">State is required</string>
    <string name="login_profile_validator_email_required">Email is required</string>
    <string name="login_profile_validator_email_not_match">Enter a valid email</string>
    <string name="login_profile_validator_cpf_not_match">Enter a valid CPF</string>
    <string name="login_alert_dialog_error_login_message">This user doesn\'t exist</string>
    <string name="login_alert_dialog_button_text">OK</string>
    <string name="shared_preferences_pref_name">EquipmentLife</string>
    <string name="shared_preferences_profile_name">profile_name</string>
    <string name="shared_preferences_profile_email">profile_email</string>
    <string name="shared_preferences_profile_username">profile_username</string>
    <string name="shared_preferences_profile_password">profile_password</string>
    <string name="shared_preferences_profile_is_logged_in">is_logged_in</string>
    <string name="equipment_owned">Owned</string>
    <string name="equipment_sold">Sold</string>
    <string name="owner_name_content">Arthur Aparecido Monteiro Figueiredo</string>
    <string name="owner_cpf_content">363.026.214-08</string>
    <string name="owner_phone_content">(11) 98520-7896</string>
    <string name="owner_email_content">a.figueiredo@himself.com</string>
    <string name="owner_address_content">Summerhill avenue, 557</string>
    <string name="owner_city_content">paranapiacaba</string>
    <string name="owner_state_content">Sao Paulo</string>
</resources>